tests/ui/resolve/token-error-correct-4.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/token-error-correct-4.rs:8:12
   |
LL | fn main() {
   |           - closing delimiter possibly meant for this
LL |     setsuna(kazusa();
   |            ^ unclosed delimiter
LL | }
   | ^ mismatched closing delimiter

error: aborting due to previous error

