tests/ui/resolve/token-error-correct-4.rs
// Test that we do some basic error correction in the tokeniser and apply suggestions.

fn setsuna(_: ()) {}

fn kazusa() {}

fn main() {
    setsuna(kazusa();
} //~ ERROR mismatched closing delimiter
